# bluemarz

./: .gitignore  Examples.md  LICENSE  README.md  Session.md  pyproject.toml
bluemarz/api/: __init__.py  openai.py
bluemarz/core/: assignments.py  class_registry.py  interfaces.py  middleware.py  models.py  registries.py  spec_registry.py
bluemarz/examples/: examples.py
bluemarz/lib/openai/: client.py  components.py
bluemarz/openai/: client.py  components.py
docs/: Agent.md  Assignment.md  CodeOfConduct.md  Examples.md  Tool.md
src/bluemarz/: __init__.py
src/bluemarz/core/: assignments.py  examples.py  exceptions.py  interfaces.py  models.py  spec_registry.py
src/bluemarz/lib/openai/: client.py  components.py  models.py
src/bluemarz/utils/: http_client.py  model_utils.py
test/unit/core/: class_registry_test.py  registries_test.py
test/unit/mocks/: core.py
